apps/syncthing/syncthing-k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: syncthing
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: syncthing
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: syncthing
        app.kubernetes.io/name: syncthing
    spec:
      containers:
        - image: docker.io/syncthing/syncthing:1.27.2
          name: syncthing
          ports:
            - containerPort: 8384
              name: http
              protocol: TCP
            - containerPort: 22000
              name: listeners
              protocol: TCP
          volumeMounts:
            - mountPath: /var/syncthing
              name: config
            - mountPath: /host
              name: host
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 1
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: host
          persistentVolumeClaim:
            claimName: host
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: syncthing
spec:
  ports:
    - name: http
      port: 8384
      targetPort: 8384
    - name: listeners
      port: 22000
      targetPort: 22000
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: syncthing
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
spec:
  routes:
    - match: Host(`syncthing-k8s.s3rv.dev`)
      kind: Rule
      services:
        - name: syncthing
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: syncthing-listeners
spec:
  entryPoints:
    - stl
  routes:
    - match: HostSNI(`*`)
      services:
        - name: syncthing
          port: listeners
